<resources>
    <string name="app_name">BabyBuy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="divider">OR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="slogan">Giving something sweet to your child</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_acc">Already have an account? Sign In</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="update">Update Item</string>
    <string name="addNewItem">Add New Item</string>
    <string name="HomeScreenTitle">Home Screen</string>
    <string name="addItemTitle">Add Item</string>
    <string name="myItems">MY ITEMS</string>
    <string name="Purchased">Purchased</string>
    <string name="NotPurchased">Not Purchased</string>
    <string name="purchasedItems">Purchased Items</string>
    <string name="location">Enter location</string>
    <string name="aboutus">About Us</string>
    <string name="info">Baby Buy was first established on May 6 2015 as a way of providing an easy way to prepare for</string>

    //menu strings
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="maps">Directions</string>
    <string name="Logout">LogOut</string>

    //settings strings
    <string name="enableDarkMode">Enable Dark Mode</string>
    <string name="nightMode">Night Mode</string>
    <string name="night">night</string>
    <string name="nightActive">Night mode is activated</string>
    <string name="nightModeInactive">Night Mode Deactivated</string>
    <string name="selectLanguage">Select Language</string>
    <string name="language">Language</string>
    <string name="language1">LANGUAGE</string>
</resources>