<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/enableDarkMode">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/night"
            android:summaryOff="@string/nightModeInactive"
            android:summaryOn="@string/nightActive"
            android:title="@string/nightMode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/selectLanguage">

        <ListPreference
            android:defaultValue="false"
            android:key="@string/language1"
            android:entries="@array/languages_list"
            android:entryValues="@array/language_value"
            android:title="@string/language" />


    </PreferenceCategory>


</PreferenceScreen>